# difference-generator

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests-and-linter.yml
gendiff/: __init__.py  app.py  diff_calc.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate-diff.py
tests/fixtures/: answer.json
